rgw: delete_obj() does not complete on ECANCELED

if we detect a racing operation with ECANCELED but still complete the
delete op, other zones cannot resolve this race during data sync

Fixes: http://tracker.ceph.com/issues/22804

Signed-off-by: Casey Bodley <cbodley@redhat.com>